[package]
name = "lmsr"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lmsr"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
test-sbf = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
common = { workspace = true }
solana-system-interface = { workspace = true }
spl-math = { workspace = true }
spl-pod = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token-metadata-interface = { workspace = true }
spl-type-length-value = { workspace = true }

[dev-dependencies]
litesvm = { workspace = true }
litesvm-token = { workspace = true }
solana-sdk = { workspace = true }
